[package]
name = "chaum_pedersen_auth"
version = "0.1.0"
edition = "2021"
description = "An implementation of ZKP(Zero Knowledge Proof) using chaum pedersen algorithm"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
hex = "0.4.3"